# term-slots

./: .gitignore  README.md  pyproject.toml  run.ps1  run_ext.ps1
horny_app/: __main__.py  context.py  ezterm.py  game_state.py  input.py  main.py  playing_card.py  playing_cards.py  slots.py
term_slots/: __main__.py  config.py  context.py  curves.py  ezterm.py  forced_burn.py  game_state.py  hand.py  input.py  keymatrix.py  main.py  playing_card.py  poker_hand.py  popup_text.py  renderer.py  slots.py
