[project]
name = "term-slots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blessed>=1.24.0",
    "numpy>=2.3.4",
]


[project.scripts]
main = "term_slots.main:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
